@startuml


interface main.java.com.lab111.labwork6.Element {
~ void accept(ElementsVisitor)
~ void display()
}

class main.java.com.lab111.labwork6.CountElementsVisitor {
- int amountOfButtons
- int amountOfPanels
+ int getAmountOfButtons()
+ int getAmountOfPanels()
+ void visitButton(Button)
+ void visitPanel(PanelComposite)

interface main.java.com.lab111.labwork6.ElementsVisitor {
~ void visitButton(Button)
~ void visitPanel(PanelComposite)
}
class main.java.com.lab111.labwork6.Button {
- String name
+ void display()
+ void accept(ElementsVisitor)
}



main.java.com.lab111.labwork6.Element <|.. main.java.com.lab111.labwork6.PanelComposite
main.java.com.lab111.labwork6.ElementsVisitor <|.. main.java.com.lab111.labwork6.CountElementsVisitor
main.java.com.lab111.labwork6.Element <|.. main.java.com.lab111.labwork6.Button
main.java.com.lab111.labwork6.PanelComposite o-- main.java.com.lab111.labwork6.Element
@enduml